<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

<!--LinearLayout chosen due to the simplicity of the the layout required-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Headers"
            android:text="@string/bienvenido"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_page_text"
            android:layout_marginTop="@dimen/margin_10dp"/>

        <Button
            android:id="@+id/continueToInstructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/continue_button"/>

    </LinearLayout>
</layout>